--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -2083,7 +2083,7 @@
  	 	 	"eng": "Purchase"
  	 	},
  	 	"use": {
- 	 	 	"trans": "采用",
+ 	 	 	"trans": "使用",
  	 	 	"eng": "use"
  	 	},
  	 	"missing": {
@@ -2240,7 +2240,7 @@
  	 	},
  	 	"maxShield": {
  	 	 	"name": {
- 	 	 	 	"trans": "最大护甲值",
+ 	 	 	 	"trans": "最大护盾值",
  	 	 	 	"eng": "MaxShield"
  	 	 	},
  	 	 	"description": {
@@ -2264,7 +2264,7 @@
  	 	 	 	"eng": "Stun chance"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "造成伤害时击晕敌人的概率，\r\n    这让他们在此回合无法还击",
+ 	 	 	 	"trans": "造成伤害时击晕敌人的概率，\r\n    这会导致他们在此回合中无法还击",
  	 	 	 	"eng": "Chance of you stunning your enemy when dealing damage, \r\n    causing them not able to respond to your attack"
  	 	 	}
  	 	},
@@ -2284,7 +2284,7 @@
  	 	 	 	"eng": "Bargain"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "影响和NPC交易时买卖的价格",
+ 	 	 	 	"trans": "影响与NPC交易时买卖的价格",
  	 	 	 	"eng": "Influences the price when buying and selling from npc's or stores."
  	 	 	}
  	 	},
@@ -2344,7 +2344,7 @@
  	 	 	 	"eng": "Healing multiplier"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "提高你恢复时的效力",
+ 	 	 	 	"trans": "提高你恢复生命值时的效率",
  	 	 	 	"eng": "Increases the potency of your heals"
  	 	 	}
  	 	},
@@ -2709,7 +2709,7 @@
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "当你击败敌人时，你会收到Exp，比特币和战利品， \n                 试试吧！",
+ 	 	 	"trans": "你击败敌人后将会收到经验，比特币和战利品， \n                 试试吧！",
  	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\r\n                give it a try now!"
  	 	},
  	 	"primaryAttack": {
@@ -2988,11 +2988,11 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "金色聊天框（带动画）",
+ 	 	 	 	 	"trans": "金色聊天框（自带动画）",
  	 	 	 	 	"eng": "Gold chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "金色个人资料（有动画）",
+ 	 	 	 	 	"trans": "金色个人资料（自带动画）",
  	 	 	 	 	"eng": "Gold Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3004,15 +3004,15 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制公会简介",
+ 	 	 	 	 	"trans": "定制公会口号",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定义公会图像",
+ 	 	 	 	 	"trans": "定制公会图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "更新的更新",
+ 	 	 	 	 	"trans": "未来持续更新中...",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3028,15 +3028,15 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "紫色聊天框（带动画）",
+ 	 	 	 	 	"trans": "紫色聊天框（自带动画）",
  	 	 	 	 	"eng": "Purple chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "紫色框架特效个人资料（有动画）",
+ 	 	 	 	 	"trans": "紫色框架特效个人资料（自带动画）",
  	 	 	 	 	"eng": "Purple Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "解锁定制生物",
+ 	 	 	 	 	"trans": "解锁自定义简介",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3076,15 +3076,15 @@
  	 	 	 	 	"eng": "Become a Cybernetic Potato"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "土豆聊天框（有动画）",
+ 	 	 	 	 	"trans": "土豆聊天框（自带动画）",
  	 	 	 	 	"eng": "Potato chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "土豆个人资料界面（有动画）",
+ 	 	 	 	 	"trans": "土豆个人资料界面（自带动画）",
  	 	 	 	 	"eng": "Potato Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "解锁定制生物",
+ 	 	 	 	 	"trans": "解锁自定义简介",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"8": {
@@ -3092,7 +3092,7 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "定制公会简介",
+ 	 	 	 	 	"trans": "定制公会口号",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"10": {
@@ -3120,15 +3120,15 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "蓝色霓虹灯特效聊天框（有动画）",
+ 	 	 	 	 	"trans": "蓝色霓虹灯特效聊天框（自带动画）",
  	 	 	 	 	"eng": "Blue Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "蓝色霓虹灯特效个人资料界面（有动画）",
+ 	 	 	 	 	"trans": "蓝色霓虹灯特效个人资料界面（自带动画）",
  	 	 	 	 	"eng": "Blue Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "解锁定制生物",
+ 	 	 	 	 	"trans": "解锁自定义简介",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3136,7 +3136,7 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制帮派简介",
+ 	 	 	 	 	"trans": "定制帮派口号",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
