--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -2968,7 +2968,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "绿色聊天框（带动画）",
+ 	 	 	 	 	"trans": "绿色聊天框（自带动画）",
  	 	 	 	 	"eng": "Green Chat Frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
@@ -2996,7 +2996,7 @@
  	 	 	 	 	"eng": "Gold Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "解锁定制生物",
+ 	 	 	 	 	"trans": "解锁自定义简介",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3044,11 +3044,11 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制帮派简介",
+ 	 	 	 	 	"trans": "定制帮派口号",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定义公会图像",
+ 	 	 	 	 	"trans": "定制公会图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3096,7 +3096,7 @@
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"10": {
- 	 	 	 	 	"trans": "自定义公会图像",
+ 	 	 	 	 	"trans": "定制公会图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"11": {
@@ -3140,7 +3140,7 @@
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定义公会图像",
+ 	 	 	 	 	"trans": "定制公会图像",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3233,7 +3233,7 @@
  	 	 	 	"eng": "AI Core Cluster"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "AI核心群集包含1000个AI核心。 可以很容易地组装和拆卸。",
+ 	 	 	 	"trans": "AI核心群集包含1000个AI核心。 它可以被容易地组装和拆卸。",
  	 	 	 	"eng": "AI Core Cluster contains 1000 AI Cores. can be easily assembled and disassembled."
  	 	 	}
  	 	},
@@ -3263,7 +3263,7 @@
  	 	 	 	"eng": "Ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "在黑市里流通的弹药碎片\r\n        如果掌握方法就能制造弹药。",
+ 	 	 	 	"trans": "在黑市里流通的弹药碎片\r\n        如果掌握了配方就能制造弹药。",
  	 	 	 	"eng": "Ammunition tech parts, These can be commonly found circulating the black market. \r\n        You can use these to craft ammunition if you understand how."
  	 	 	}
  	 	},
@@ -3273,7 +3273,7 @@
  	 	 	 	"eng": "Military ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "军用弹药碎片，被政府、军队、精英人士广泛使用，如果掌握方法就能制造高级弹药。",
+ 	 	 	 	"trans": "军用弹药碎片，被政府、军队、精英人士广泛使用，如果掌握了配方就能制造高级弹药。",
  	 	 	 	"eng": "Military grade ammunition tech parts, commonly used by government, military and the elites,can be used to craft into usable Ammo if you have the know-how"
  	 	 	}
  	 	},
@@ -3283,7 +3283,7 @@
  	 	 	 	"eng": "Tech Scrap"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "从被拆解的武器与装甲上得到的碎片，可以进行逆向工程来获得合成经验。\r\n        可在[工作中心]进行逆向工程。",
+ 	 	 	 	"trans": "从被拆解的武器与装甲上得到的碎片，可以进行逆向工程来获得合成经验。\r\n        在[工作中心]即可进行逆向工程。",
  	 	 	 	"eng": "Technology scrap from disassembled equipment, this can be reverse engineered to gain printing xp. \r\n        You can perform reverse engineering in the Job Hub."
  	 	 	}
  	 	},
@@ -3541,7 +3541,7 @@
  	 	 	 	"eng": "Medical Tech Parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "用过的医疗仪器的碎片和元件，如果知道方法的话，就可以用它们来制造医疗物品",
+ 	 	 	 	"trans": "使用过的医疗仪器碎片和元件，如果知道配方的话，就可以用它们来制造医疗物品",
  	 	 	 	"eng": "Bits and pieces of used medical tech. This can be used to craft healing items if you understand how"
  	 	 	}
  	 	},
@@ -3551,7 +3551,7 @@
  	 	 	 	"eng": "Experience Memory"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "内含某人记忆的记忆银行。使用后你会获得其中的经验点",
+ 	 	 	 	"trans": "内含某人记忆的记忆单元。使用后你会获得其中的经验点",
  	 	 	 	"eng": "Memory bank contains someone's memory. If used you may gain experience from this"
  	 	 	}
  	 	},
@@ -3644,7 +3644,7 @@
  	 	 	 	"eng": "Gang Invasion Order Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一个简单的散播装置，可以与您的公会加密通道进行绑定并提供入侵订单。 \r\n         此物品需要激活公会地下城才可使用",
+ 	 	 	 	"trans": "一个简单的散播装置，可以与您的公会加密通道进行绑定并提供入侵命令。 \r\n        公会地下城需要此物品需要激活才可进入",
  	 	 	 	"eng": "A simple transmitter device that can be bind to your gang encrypted channel and give out invasion order.\r\n        This item is required to activate Gang Dungeons"
  	 	 	}
  	 	},
@@ -3690,7 +3690,7 @@
  	 	 	 	 	"percent",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "包含推进AI的碎片，旨在协助升级设备。 使用时，通过${duration}分钟将破坏性故障的可能性减少（可堆叠）",
+ 	 	 	 	"trans": "包含先进AI的碎片，旨在协助升级装备。 使用后，在${duration}分钟内破坏性故障发生的概率降低${percent}%（可叠加）",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
  	 	 	}
  	 	},
@@ -3707,7 +3707,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "包含推进AI的碎片，旨在协助升级设备。 使用时，以${duration}分钟通过${percent}％（可堆叠${maxStack}时间）减少破坏性失败的可能性。此效果将适用于所有在线玩家",
+ 	 	 	 	"trans": "包含先进AI的碎片，旨在协助升级装备。 使用后，在${duration}分钟内破坏性故障发生的概率降低${percent}％（可叠加${maxStack}次）。此效果将适用于所有在线玩家",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
  	 	 	}
  	 	},
@@ -3723,7 +3723,7 @@
  	 	 	 	"eng": "Calibration AI Shard (50%) [EVENT]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "含有先进AI的碎片，旨在协助升级设备。 \r\n         使用时，将破坏性故障的可能性降低50％5分钟。 效果仅对自己生效。 \r\n         您可以在您的公会总部校准物品，但首先必须加入或成立一个公会。",
+ 	 	 	 	"trans": "含有先进AI的碎片，旨在协助升级设备。 \r\n         使用后，在5分钟内破坏性故障发生的概率降低50％。 效果仅对自己生效。 \r\n         您可以在您的公会总部校准物品，但必须先加入或创建一个公会。",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments.\r\n        When used, decreases the chance of destructive failure by 50% for 5 minutes. this only affect yourself.\r\n        You can calibrate items in your Gang Headquarters, you must join or start a gang first."
  	 	 	}
  	 	},
@@ -3748,7 +3748,7 @@
  	 	 	 	"eng": "Calibration Safety Nano Bots"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "实验纳米机器设计用于减少和否定失效校准时的破坏性效果， \r\n         激活后，5分钟内所有校准都不会破坏物品",
+ 	 	 	 	"trans": "实验性纳米机器，设计用于减少和抵消失效校准时的破坏性效果， \r\n         激活后，5分钟内所有校准都不会破坏物品",
  	 	 	 	"eng": "Experimental nano machines designed to reduces and negate the destructive effect when failing calibration, \r\n        when this is activated, all calibration fails will not destroy the item for 5 minutes (Applies to all players)"
  	 	 	}
  	 	},
@@ -3788,7 +3788,7 @@
  	 	 	 	"eng": "Employee Office Case"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一个标准的办公箱，它有一个写着“Arasaka”的白色的标签， \r\n         有一些高科技隔间和用于文件存储的插槽，但华而不实，不是很适合携带武器 \r\n         装备时增加库存空间",
+ 	 	 	 	"trans": "一个标准的办公箱，它有一个写着“Arasaka”的白色标签， \r\n         虽然有些高科技隔间和用于文件存储的插槽，但华而不实，不是很适合携带武器 \r\n         装备时增加库存空间",
  	 	 	 	"eng": "An standard issue office case, it has a label with whit print with \"Arasaka\" on it, \r\n        while it is specious and has some high tech compartment and slots for document storage, it is not not very suitable for carrying weapons\r\n        increase inventory space when equipped"
  	 	 	}
  	 	},
@@ -3838,7 +3838,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [Love]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "你得到了一些爱，你得到了一些爱！ 每个人都得到一些爱！ \r\n         当使用时，每个人都相爱！ \r\n         每个玩家将彼此相爱10分钟",
+ 	 	 	 	"trans": "你得到了一些爱，你也得到了一些爱！ 每个人都得到一些爱！ \r\n         当使用时，每个人都相爱！ \r\n         每个玩家将彼此相爱10分钟",
  	 	 	 	"eng": "You get some love, and you get some love! everyone gets some love!.\r\n        When used everyone loves each other\r\n        This effects all players fow 10 minutes"
  	 	 	}
  	 	},
@@ -3878,7 +3878,7 @@
  	 	 	 	"eng": "Protocol Breach Shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "包含提前利用的碎片。 \r\n         可用于漏洞系统，如香格里拉数据堡垒",
+ 	 	 	 	"trans": "包含先进利用的碎片。 \r\n         可用于突破系统漏洞，列如香格里拉数据堡垒",
  	 	 	 	"eng": "A shard that contains advance exploits. \r\n        Can be used to breach systems such as Shangri-la Data Fortress"
  	 	 	}
  	 	},
@@ -3904,7 +3904,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "一个碎片，包含预先利用，旨在增加高层物品随机降落的机会。 在解锁传奇容器（不可堆叠）以获得${time}分钟时，可以获得传奇（${legendaryChance}％）和史诗（${epicChance}％）项目的额外可能。 *重要提示：在BUFF处于活动状态时启动解锁过程时，BUFF将仅适用。",
+ 	 	 	 	"trans": "一个碎片，包含了先进利用，旨在增加高级物品随机降落的机会。 在解锁传奇容器时（不可叠加），${time}分钟内，增加获得传奇（${legendaryChance}％）和史诗（${epicChance}％）物品的概率。(此效果将适用于所有的玩家)重要提示：在BUFF处于有效期间时启动解锁过程才可获得效果。",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
@@ -3960,14 +3960,14 @@
  	 	 	 	 	"tierName",
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "${tierName}${typeName}缓存体",
+ 	 	 	 	"trans": "${tierName}${typeName}缓存单元",
  	 	 	 	"eng": "${tierName} ${typeName} cache"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "一个含有${typeName}信息的分子印刷机缓存单元, \r\n                    可以去市中心使用3D分子印刷机来使用它打印一个${typeName}\r\n                    \r\n                    来自前人的建议：合成装备的等级将取决于你印刷等级的高低,\r\n                    所以最好先使用低等级的缓存体, 因为合成它们需要更少的比特币并且对提升你的印刷等级有帮助",
+ 	 	 	 	"trans": "一个含有${typeName}信息的分子印刷机缓存单元, \r\n                    可以去市中心使用3D分子印刷机来使用它打印一个${typeName}\r\n                    \r\n                    来自大佬的建议：合成装备的等级将取决于你印刷等级的高低,\r\n                    所以最好先使用低等级的缓存体, 因为合成它们需要更少的比特币并且对提升你的印刷等级有帮助",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	}
@@ -4854,7 +4854,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "${enemyName}攻击您，你受到了${value}伤害",
+ 	 	 	 	"trans": "${enemyName}攻击了你，你受到了${value}伤害",
  	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
  	 	 	},
  	 	 	"playerAttack": {
@@ -4862,7 +4862,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "您攻击了${enemyName}，造成${value}伤害",
+ 	 	 	 	"trans": "你攻击了${enemyName}，造成${value}伤害",
  	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
  	 	 	}
  	 	}
@@ -4898,7 +4898,7 @@
  	 	 	"eng": "You cannot use door while there is still enemy in room"
  	 	},
  	 	"enemyInCrateDoorError": {
- 	 	 	"trans": "在附近的敌人仍然有搜索太危险了",
+ 	 	 	"trans": "在附近仍然有敌人时搜索太危险了",
  	 	 	"eng": "It is too dangerous to search while there are still enemies nearby"
  	 	},
  	 	"quest": {
@@ -4907,7 +4907,7 @@
  	 	 	 	"eng": "Accept Quest"
  	 	 	},
  	 	 	"decline": {
- 	 	 	 	"trans": "放弃任务",
+ 	 	 	 	"trans": "拒绝任务",
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
@@ -4929,7 +4929,7 @@
  	 	 	 	"eng": "Explore ${zoneName}"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "深入地下城来获得等好的物资与更多的经验吧！\r\n                        切记在进入前准备好药物! 在地下城中你的血量不会在战斗后恢复！",
+ 	 	 	 	"trans": "你准备好了吗？深入地下城来获得更好的物资与更多的经验吧！\r\n                        切记在进入前准备好药物! 在地下城中你的血量不会在战斗后恢复！",
  	 	 	 	"eng": "Are you ready? you can test your strength out with normal dungeon, the easiest one.\r\n                        Remember to bring healing item! you won't heal after fights in dungeon"
  	 	 	}
  	 	},
@@ -4951,7 +4951,7 @@
  	 	 	 	"eng": "Recommended Level: ${maxLevel}+ with co-op\r\n                    ${expMultiplier}x more EXP!\r\n                    Challenge mode dungeon, extra loot and exp.\r\n                    Drops ${keyFragmentDisplayName}\r\n                    Not advised to enter if your level is too low"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "觉得自己足够强大了吗? 挑战地下城里大展身手吧！\r\n                        里面有海量的物资等待着你的探索，也有一个强大的首领等候着你!\r\n                        建议最好与其他玩家一起合作探索",
+ 	 	 	 	"trans": "觉得自己足够强大了吗? 在挑战地下城里大展身手吧！\r\n                        里面有海量的物资等待着你的探索，也有一个强大的首领等候着你!\r\n                        建议最好与其他玩家一起合作探索",
  	 	 	 	"eng": "Are you strong enough? try it out on Challenge Dungeon,\r\n                        there is a strong boss and tons of loot at the end waiting for you!\r\n                        Its recommended to attempt this with other players."
  	 	 	}
  	 	},
