--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -3644,7 +3644,7 @@
  	 	 	 	"eng": "Gang Invasion Order Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一个简单的散播装置，可以与您的公会加密通道进行绑定并提供入侵命令。 \r\n        公会地下城需要此物品需要激活才可进入",
+ 	 	 	 	"trans": "一个简单的散播装置，可以与您的公会加密通道进行绑定并提供入侵命令。 \r\n        公会地下城需要激活此物品才可进入",
  	 	 	 	"eng": "A simple transmitter device that can be bind to your gang encrypted channel and give out invasion order.\r\n        This item is required to activate Gang Dungeons"
  	 	 	}
  	 	},
