--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -966,7 +966,7 @@
  	 	},
  	 	"afkTask": {
  	 	 	"newbieTip": {
- 	 	 	 	"trans": "La tâche continuera même si tu quitte le jeu",
+ 	 	 	 	"trans": "La tâche continuera même si tu quittes le jeu",
  	 	 	 	"eng": "The task will continue even if you close the game"
  	 	 	},
  	 	 	"syncing": {
