--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -2380,7 +2380,7 @@
  	 	},
  	 	"upgradeChance": {
  	 	 	"name": {
- 	 	 	 	"trans": "キャリブレーション率",
+ 	 	 	 	"trans": "キャリブレーションの成功率",
  	 	 	 	"eng": "Calibration Chance"
  	 	 	},
  	 	 	"description": {
@@ -3738,7 +3738,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "キャリブレーションAIシャード（${percent}％）",
+ 	 	 	 	"trans": "キャリブレーションAIのかけら（${percent}％）",
  	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
  	 	 	}
  	 	},
@@ -3838,7 +3838,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [Love]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "愛がすべて、すべては愛！ 人はみな愛で生きている! \r\n         使うと誰もが皆を愛してやまなくなる. \r\n         この効果はすべてのプレイヤーに10分間付与される",
+ 	 	 	 	"trans": "愛がすべて, すべては愛！ 人はみな愛で生きている! \r\n         使うと誰もが皆を愛してやまなくなる. \r\n         この効果はすべてのプレイヤーに10分間付与される",
  	 	 	 	"eng": "You get some love, and you get some love! everyone gets some love!.\r\n        When used everyone loves each other\r\n        This effects all players fow 10 minutes"
  	 	 	}
  	 	},
@@ -3854,7 +3854,7 @@
  	 	},
  	 	"timeSkipPersonal": {
  	 	 	"name": {
- 	 	 	 	"trans": "個人用シナプスアクセラレータ",
+ 	 	 	 	"trans": "個人用シナプス加速器",
  	 	 	 	"eng": "Personal Synaptic Accelerator"
  	 	 	},
  	 	 	"description": {
@@ -3874,11 +3874,11 @@
  	 	},
  	 	"hackTool": {
  	 	 	"name": {
- 	 	 	 	"trans": "プロトコル突破の破片",
+ 	 	 	 	"trans": "プロトコル突破装置のかけら",
  	 	 	 	"eng": "Protocol Breach Shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "アドバンスエクスプロイトを含む断片. \r\n         Shangri-Laデータ防壁などのシステムを突破するために使用できる",
+ 	 	 	 	"trans": "高度な技術によるエクスプロイトを含むAIの断片. \r\n         Shangri-Laデータ防壁などのシステムを突破するために使用できる",
  	 	 	 	"eng": "A shard that contains advance exploits. \r\n        Can be used to breach systems such as Shangri-la Data Fortress"
  	 	 	}
  	 	},
@@ -4518,7 +4518,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko s plus pro max"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "コンニチワ! !UwU  \r\n         今日の調子はどう? リッチな気分? ラッキーな予感がする?? \r\n         1プレイたったの1,000,000 BTC（期間限定価格!）, なんと「英雄の」アイテムが0.1％で当たっちゃう!",
+ 	 	 	 	"trans": "コンニチワ! !UwU  \r\n         今日の調子はどう? リッチな気分? ラッキーな予感がする?? \r\n         1プレイたったの1,000,000 BTC（期間限定価格）! なんと「英雄の」アイテムが0.1％で当たっちゃう!",
  	 	 	 	"eng": "Konnichiwa!! UwU\r\n        Are you feeling rich and lucky today?\r\n        play now only 1,000,000 btc once (limited time special offer!) with 0.1% chance to win a EPIC item! \r\n        "
  	 	 	}
  	 	},
