--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -4780,7 +4780,7 @@
  	 	 	 	 	"eng": "Use global chat"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "다른 플레이어와 채팅해보세요. 다만 도배는 금지입니다.",
+ 	 	 	 	 	"trans": "다른 플레이어와 채팅해보세요. 다만 의미없는 채팅이나 도배를 하면 뮤트(채팅 불가)를 받을수 있습니다.",
  	 	 	 	 	"eng": "Chat with other players, spam not allowed"
  	 	 	 	}
  	 	 	},
