--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -3547,7 +3547,7 @@
  	 	},
  	 	"expMemory": {
  	 	 	"name": {
- 	 	 	 	"trans": "経験の記憶装置",
+ 	 	 	 	"trans": "EXPメモリ",
  	 	 	 	"eng": "Experience Memory"
  	 	 	},
  	 	 	"description": {
