--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -3874,11 +3874,11 @@
  	 	},
  	 	"hackTool": {
  	 	 	"name": {
- 	 	 	 	"trans": "プロトコル突破装置のかけら",
+ 	 	 	 	"trans": "プロトコル突破装置の破片",
  	 	 	 	"eng": "Protocol Breach Shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "高度な技術によるエクスプロイトを含むAIの断片. \r\n         Shangri-Laデータ防壁などのシステムを突破するために使用できる",
+ 	 	 	 	"trans": "高度な技術によるエクスプロイトを含むAIの断片. \r\n         Shangri-Laデータ防壁のような防衛システムを突破するのに使用できる",
  	 	 	 	"eng": "A shard that contains advance exploits. \r\n        Can be used to breach systems such as Shangri-la Data Fortress"
  	 	 	}
  	 	},
