--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -3610,7 +3610,7 @@
  	 	},
  	 	"lootBox1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Caisse verouillée",
+ 	 	 	 	"trans": "Caisse verrouillée",
  	 	 	 	"eng": "locked container"
  	 	 	},
  	 	 	"description": {
