--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -2023,7 +2023,7 @@
  	 	 	"eng": "Equipped"
  	 	},
  	 	"ok": {
- 	 	 	"trans": "わかった",
+ 	 	 	"trans": "OK",
  	 	 	"eng": "OK"
  	 	},
  	 	"level": {
@@ -3904,7 +3904,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "高ランクアイテムのドロップ確率を上げるために設計された, 高度なエクスプロイトが内包されたシャード. ${time}分の間にロック解除が始まった伝説のコンテナからの「伝説」「英雄」アイテムドロップ率を上昇させる（ 伝説：+${legendaryChance}％, 英雄：+${epicChance}％）. *注：既にバフがア発動している状態でコンテナのロック解除が開始された場合のみ, このバフは適用されます.",
+ 	 	 	 	"trans": "高ランクアイテムのドロップ確率を上げるために設計された機械の破片. 乱数を操作するプログラムが含まれている. ${time}分の間にロック解除が始まった伝説のコンテナからの「伝説」「英雄」アイテムドロップ率を上昇させる（ 伝説：+${legendaryChance}％, 英雄：+${epicChance}％）. *注：既にバフがア発動している状態でコンテナのロック解除が開始された場合のみ, このバフは適用されます.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
@@ -3943,14 +3943,14 @@
  	 	 	 	 	"segmentDisplayName",
  	 	 	 	 	"fragmentNum"
  	 	 	 	],
- 	 	 	 	"trans": "${segmentDisplayName}キーフラグメント${fragmentNum}",
+ 	 	 	 	"trans": "${segmentDisplayName}駅のキーのかけら${fragmentNum}",
  	 	 	 	"eng": "${segmentDisplayName} Key Fragment ${fragmentNum}"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"segmentDisplayName"
  	 	 	 	],
- 	 	 	 	"trans": "シークレットキーを獲得するには, シークレットキーのかけらを使用する必要があります. \r\n                                 中心街[ハブ]にあるターミナルを使用し, ${segmentDisplayName}シークレットキーを獲得しましょう. \r\n                                 必要な3つのキーは各ダンジョン（ノーマル・チャレンジどれでも）でそれぞれ入手可能. \r\n                                 3つのキーを獲得すると,ターミナルを使って次のエリアへのキーをクラフトできる.",
+ 	 	 	 	"trans": "シークレットキーを獲得するには, キーのかけらを使用する必要があります. \r\n                                 中心街[ハブ]にあるターミナルを使用し, ${segmentDisplayName}シークレットキーを獲得しましょう. \r\n                                 必要な3つのキーは各ダンジョン（ノーマル・チャレンジどれでも）でそれぞれ入手可能. \r\n                                 3つのキーを獲得すると,ターミナルを使って次のエリアへのキーをクラフトできる.",
  	 	 	 	"eng": "A secret key Fragment used to brute-force a secret key.\r\n                                Use the Terminal at city center [Hub] to brute-force a ${segmentDisplayName} secret key.\r\n                                You can acquire each of the 3 required keys in each dungeon (both normal or challenge),\r\n                                when you acquired 3 keys, you may use Terminal to brute-force (Craft) a key to the next area"
  	 	 	}
  	 	},
@@ -4036,7 +4036,7 @@
  	 	 	 	 	"eng": "Go to Shangri-La Commercial Area"
  	 	 	 	},
  	 	 	 	"tut": {
- 	 	 	 	 	"trans": "ここで仕事を探せます. 仕事をこなすことでスキルレベルを鍛えられます",
+ 	 	 	 	 	"trans": "ここでは仕事を探すことができる. 仕事をこなすことでスキルレベルが上がるだろう",
  	 	 	 	 	"eng": "You can complete AFK jobs to increase your skills here"
  	 	 	 	}
  	 	 	},
@@ -4046,7 +4046,7 @@
  	 	 	 	 	"eng": "Go to Shangri-La Market Street"
  	 	 	 	},
  	 	 	 	"tut": {
- 	 	 	 	 	"trans": "ここで他のプレイヤーとアイテムを売買することができます",
+ 	 	 	 	 	"trans": "他のプレイヤーとのアイテムの売買が可能. ",
  	 	 	 	 	"eng": "You can sell or buy items from other players here"
  	 	 	 	}
  	 	 	},
@@ -4209,7 +4209,7 @@
  	 	"unitExchange": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"UNITが欲しい?それとも持ってるUNITを使いたい?"
+ 	 	 	 	 	"UNITをお求めですか? それとも, お持ちのUNITを利用されます?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Do you want to buy Units, or use your Units?"
@@ -4246,7 +4246,7 @@
  	 	 	 	"eng": "You need to be at least level 3 to access cosmetic merchant"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "ゲームをお楽しみですか？寄付を検討いただけると幸いです:)",
+ 	 	 	 	"trans": "ゲームをお楽しみ頂けていますか? 寄付を検討いただけると幸いです:)",
  	 	 	 	"eng": "If you liked the game, please consider donation :)"
  	 	 	}
  	 	},
@@ -4691,7 +4691,7 @@
  	 	 	 	 	"eng": "Be a merchant"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "商品を市場に入れる",
+ 	 	 	 	 	"trans": "商品をプレイヤーマーケットで出品する",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
  	 	 	}
@@ -4722,7 +4722,7 @@
  	 	},
  	 	"christmasGift": {
  	 	 	"name": {
- 	 	 	 	"trans": "神秘的なコンテナのロックを解除します",
+ 	 	 	 	"trans": "神秘的なコンテナを開ける",
  	 	 	 	"eng": "Unlock Mysterious Container"
  	 	 	}
  	 	},
@@ -4791,7 +4791,7 @@
  	 	 	"eng": "Synaptic Acceleration (Rare)"
  	 	},
  	 	"expBonus": {
- 	 	 	"trans": "前部皮質の強化",
+ 	 	 	"trans": "前頭皮質の強化",
  	 	 	"eng": "Frontal Cortex Enhancement"
  	 	},
  	 	"btcBonus": {
