--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} 比特币将被存入你的公会账户，这是不可逆转的",
+ 	 	 	 	 	"trans": "${amount} 比特币将被存入公会的账户，这是不可逆转的",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -81,14 +81,14 @@
  	 	 	 	"eng": "members"
  	 	 	},
  	 	 	"occupationPoint": {
- 	 	 	 	"trans": "控制香格里拉",
+ 	 	 	 	"trans": "对香格里拉的控制力",
  	 	 	 	"eng": "Control over Shangri-la"
  	 	 	},
  	 	 	"nextUpkeepDate": {
  	 	 	 	"vars": [
  	 	 	 	 	"nextUpkeepDate"
  	 	 	 	],
- 	 	 	 	"trans": "下一次保留日期：${nextUpkeepDate}",
+ 	 	 	 	"trans": "下一次维护日期：${nextUpkeepDate}",
  	 	 	 	"eng": "Next upkeep Date: ${nextUpkeepDate}"
  	 	 	},
  	 	 	"insufficientError": {
@@ -137,7 +137,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "您找到了一个带有彩色键盘的锁定的战利品盒，你应该能够用正确的颜色序列来解锁它。",
+ 	 	 	 	 	"trans": "您找到了一个带有彩色键盘的上锁战利品盒，你应该能够用正确的颜色序列来解锁它。",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -160,7 +160,7 @@
  	 	 	 	 	 	"eng": "Decryption failed"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "单击正确的颜色序列以解锁",
+ 	 	 	 	 	 	"trans": "点击正确的颜色序列以解锁",
  	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
  	 	 	 	 	},
  	 	 	 	 	"button": {
@@ -239,11 +239,11 @@
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
- 	 	 	 	 	"trans": "你想存入多少钱？",
+ 	 	 	 	 	"trans": "你想要存入多少比特币？",
  	 	 	 	 	"eng": "How much would you like to deposit?"
  	 	 	 	},
  	 	 	 	"selectWithdraw": {
- 	 	 	 	 	"trans": "你想取出多少钱？",
+ 	 	 	 	 	"trans": "你想要取出多少比特币？",
  	 	 	 	 	"eng": "How much would you like to withdraw?"
  	 	 	 	}
  	 	 	},
@@ -268,7 +268,7 @@
  	 	 	 	},
  	 	 	 	"tertiary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "毁灭武器",
+ 	 	 	 	 	 	"trans": "破坏性武器",
  	 	 	 	 	 	"eng": "Destruct."
  	 	 	 	 	}
  	 	 	 	}
@@ -321,7 +321,7 @@
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
- 	 	 	 	"trans": "请不要发送短信息，尝试更长的句子。",
+ 	 	 	 	"trans": "请不要发送太短的信息，请使用更长的句子。",
  	 	 	 	"eng": "Please do not send short messages, try a longer sentence instead."
  	 	 	},
  	 	 	"underlevelChatBlock": {
@@ -354,7 +354,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"name"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${name}即将在几秒钟内用完！",
+ 	 	 	 	 	"trans": "${name}即将在几秒钟内过期！",
  	 	 	 	 	"eng": "${name} is about to run out in a few seconds!"
  	 	 	 	},
  	 	 	 	"refresh": {
@@ -365,7 +365,7 @@
  	 	},
  	 	"chatPreview": {
  	 	 	"notConnected": {
- 	 	 	 	"trans": "聊天系统未连接",
+ 	 	 	 	"trans": "聊天系统尚未连接",
  	 	 	 	"eng": "chat system not connected"
  	 	 	}
  	 	},
@@ -405,7 +405,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "通过打印更多的缓存来增加您的分子印刷等级以印刷更强大的武器",
+ 	 	 	 	"trans": "通过打印更多的缓存来增加您的分子打印等级以创造更强大的武器",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
@@ -480,7 +480,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "全球时光飞逝会让您跳过等待时间并立即完成。 \n     这将对所有执行挂机任务中的玩家生效。",
+ 	 	 	 	 	"trans": "全球时光飞逝会让您跳过等待时间并立即完成手上的任务。 \n     这将对所有执行挂机任务中的玩家生效。",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -1022,7 +1022,7 @@
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "提升印刷等级",
+ 	 	 	 	 	 	"trans": "提升打印等级",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -1059,17 +1059,17 @@
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "看起来您有一些AI核心，请使用它们在适当的级别区域进行AFK自动升级。",
+ 	 	 	 	 	 	"trans": "看起来您有一些AI核心，请在适当的区域用它们来挂机升级。",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"noAiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "获得AI核心",
+ 	 	 	 	 	 	"trans": "获取AI核心",
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "您可以通过以下方式获得AI核心： \n          - 在各个地方清除 \n          - 用哈希处理器和技术碎片制作 \n          - 在所有地点的敌人上掉落",
+ 	 	 	 	 	 	"trans": "您可以通过以下方式来获取AI核心： \n          - 在各个地方清除 \n          - 用哈希处理器和技术碎片制作 \n          - 在所有地点的敌人上掉落",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1730,11 +1730,11 @@
  	 	 	},
  	 	 	"noEquipment": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "找不到设备",
+ 	 	 	 	 	"trans": "找不到装备",
  	 	 	 	 	"eng": "equipment not found"
  	 	 	 	},
  	 	 	 	"subTitle": {
- 	 	 	 	 	"trans": "选择要继续的设备",
+ 	 	 	 	 	"trans": "选择要继续的装备",
  	 	 	 	 	"eng": "Select an equipment to continue"
  	 	 	 	}
  	 	 	},
@@ -2059,7 +2059,7 @@
  	 	 	"eng": "Status Effects"
  	 	},
  	 	"quickSlot": {
- 	 	 	"trans": "物品栏",
+ 	 	 	"trans": "快捷栏",
  	 	 	"eng": "Quick Slot"
  	 	},
  	 	"receives": {
@@ -2159,7 +2159,7 @@
  	 	 	"eng": "Requires you to be in a gang"
  	 	},
  	 	"requireTopGang": {
- 	 	 	"trans": "需要在排名前二的公会",
+ 	 	 	"trans": "需要你在占领控制榜上排名前二的公会里",
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
@@ -2354,7 +2354,7 @@
  	 	 	 	"eng": "Time reduction"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "减少完成线下任务所需的时间",
+ 	 	 	 	"trans": "减少完成挂机任务所需的时间",
  	 	 	 	"eng": "Reduce AFK task required time"
  	 	 	}
  	 	},
@@ -2412,7 +2412,7 @@
  	 	},
  	 	"m1Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "野兽帮杀手",
+ 	 	 	 	"trans": "野兽帮宿敌",
  	 	 	 	"eng": "Animals Nemesis"
  	 	 	},
  	 	 	"description": {
@@ -2422,7 +2422,7 @@
  	 	},
  	 	"m2Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "净化大师",
+ 	 	 	 	"trans": "巫毒宿敌",
  	 	 	 	"eng": "Voodoo Nemesis"
  	 	 	},
  	 	 	"description": {
@@ -2432,7 +2432,7 @@
  	 	},
  	 	"m3Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "流浪者管理员",
+ 	 	 	 	"trans": "流浪者宿敌",
  	 	 	 	"eng": "Scavengers Nemesis"
  	 	 	},
  	 	 	"description": {
@@ -2456,7 +2456,7 @@
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "动物帮派增加对你的伤害",
+ 	 	 	 	"trans": "野兽帮增加对你的伤害",
  	 	 	 	"eng": "Enemies of Animals gang deals increased damage to you"
  	 	 	}
  	 	},
@@ -2466,7 +2466,7 @@
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "伏都教男孩团伙增加对你的伤害",
+ 	 	 	 	"trans": "巫毒小子增加对你的伤害",
  	 	 	 	"eng": "Enemies of Voodoo Boys gang deals increased damage to you"
  	 	 	}
  	 	}
@@ -2574,7 +2574,7 @@
  	 	 	 	"eng": "Newbie with benefit"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "杀死一些敌人并为您开始一整套物品来开始旅程",
+ 	 	 	 	"trans": "杀死一些敌人并获取一整套物品来开始旅程",
  	 	 	 	"eng": "Kill some enemies and get a full set of items for you to start your journey"
  	 	 	}
  	 	},
@@ -2584,7 +2584,7 @@
  	 	 	 	"eng": "Allies and Friends"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "欢迎来到CCO， \r\n         在进行合作任务时，多交朋友会非常有用。 \r\n         如果有任何疑问，请询问其他在线的玩家:) \r\n         但是，如果您发送垃圾信息，将会被禁言。",
+ 	 	 	 	"trans": "欢迎来到CCO， \r\n         在进行合作任务时，多交一些朋友会非常有用。 \r\n         如果您有任何疑问，请询问其他在线的玩家:) \r\n         但是，如果你在聊天室里发送垃圾信息，你将会被管理员禁言。",
  	 	 	 	"eng": "Welcome to CyberCode Online,\r\n        making friends with people online will be very useful for you to complete co-op quests,\r\n        go ahead ask people online if you have got any questions :)\r\n        Remember, if you spam in the chat, you will be muted by moderators."
  	 	 	}
  	 	},
@@ -2594,7 +2594,7 @@
  	 	 	 	"eng": "Reach printing rank 3"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "使用缓存打印的项目级别由您的打印等级决定， \r\n         升级您的打印等级，以便您可以打印更高的级别项目。 \r\n        \r\n         您可以在[中央枢纽]在[中央中心]，使用它来打印一些缓存来提升您的打印等级",
+ 	 	 	 	"trans": "使用缓存单元打印的物品等级将由您的打印等级决定， \r\n         升级您的打印等级，以便您可以打印更高的等级的物品。 \r\n        \r\n         您可以在[市中心]找到[3D分子打印机]，使用它来打印一些缓存单元来提升您的打印等级",
  	 	 	 	"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -2627,7 +2627,7 @@
  	 	 	},
  	 	 	"social": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "社会的",
+ 	 	 	 	 	"trans": "社交的",
  	 	 	 	 	"eng": "social"
  	 	 	 	}
  	 	 	},
@@ -2694,7 +2694,7 @@
  	 	 	 	"eng": "Acquire Bitcoin"
  	 	 	},
  	 	 	"print": {
- 	 	 	 	"trans": "3D分子印刷",
+ 	 	 	 	"trans": "3D分子打印",
  	 	 	 	"eng": "Molecular Printing"
  	 	 	}
  	 	},
@@ -2721,7 +2721,7 @@
  	 	 	"eng": "Click 'TAKE ALL' to get all the loots"
  	 	},
  	 	"dungeonQuest": {
- 	 	 	"trans": "点击“接受任务”接受任务，您可以随时完成或放弃任务",
+ 	 	 	"trans": "点击“接受任务”来接受任务，您可以随时完成或放弃任务",
  	 	 	"eng": "Click 'ACCEPT QUEST' to accept the quest, you may complete or abandon the quest at any time"
  	 	}
  	},
@@ -3904,7 +3904,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "一个碎片，包含了先进利用，旨在增加高级物品随机降落的机会。 在解锁传奇容器时（不可叠加），${time}分钟内，增加获得传奇（${legendaryChance}％）和史诗（${epicChance}％）物品的概率。(此效果将适用于所有的玩家)重要提示：在BUFF处于有效期间时启动解锁过程才可获得效果。",
+ 	 	 	 	"trans": "一个碎片，包含了先进利用，旨在增加高级物品随机掉落的机会。 在解锁传奇容器时（不可叠加），${time}分钟内，增加获得传奇（${legendaryChance}％）和史诗（${epicChance}％）物品的概率。(此效果将适用于所有的玩家)重要提示：在BUFF处于有效期间时启动解锁过程才可获得效果。",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
@@ -3981,7 +3981,7 @@
  	 	},
  	 	"print": {
  	 	 	"name": {
- 	 	 	 	"trans": "印刷等级",
+ 	 	 	 	"trans": "打印等级",
  	 	 	 	"eng": "printing rank"
  	 	 	}
  	 	},
@@ -4325,7 +4325,7 @@
  	 	"bank": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"欢迎，我需要为您存什么东西呢？"
+ 	 	 	 	 	"欢迎，我能为您存什么东西吗？"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
@@ -4424,11 +4424,11 @@
  	"action": {
  	 	"increasePrint": {
  	 	 	"name": {
- 	 	 	 	"trans": "去分子合成工厂工作",
+ 	 	 	 	"trans": "在分子合成工厂里工作",
  	 	 	 	"eng": "work in printing factory"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "在不消耗装备碎片的情况下练习你的分子合成技巧, 这将帮助你提高你的印刷等级。",
+ 	 	 	 	"trans": "在不消耗装备碎片的情况下练习你的分子合成技巧, 这将帮助你提高你的打印等级。",
  	 	 	 	"eng": "Improve Printing Rank without sacrificing tech scrap, this may help to increase the level of your prints."
  	 	 	}
  	 	},
@@ -4468,7 +4468,7 @@
  	 	 	 	"eng": "initiate crypto mining"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "进行比特币挖矿以获得比特币，但是被用来挖矿的哈希处理器由于经常过载使用，内建的量子处理器(QPU)会被烧毁。",
+ 	 	 	 	"trans": "进行比特币挖矿以获得比特币，但是被用来挖矿的哈希处理器由于经常过载使用，内建的量子处理器会被烧毁。",
  	 	 	 	"eng": "Engaging in crypto mining will earn you Bitcoins, however due to the intense use of the Hash Processors, the Quantum Processing Unit, otherwise known as the QPU, will often burn out."
  	 	 	}
  	 	},
@@ -4518,7 +4518,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko s plus pro max"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Konnichiwa !! 乌武 \r\n         你今天感觉很富有吗？ \r\n         现在只玩1,000,000 BTC一次（限时特别优惠！）即可有0.1％的机会赢得史诗级别的物品！",
+ 	 	 	 	"trans": "Konnichiwa !! 乌武 \r\n         你今天感觉很富有吗？ \r\n         现在只需要1,000,000 BTC一次（限时特别优惠！）即可有0.1％的机会赢得史诗级别的物品！",
  	 	 	 	"eng": "Konnichiwa!! UwU\r\n        Are you feeling rich and lucky today?\r\n        play now only 1,000,000 btc once (limited time special offer!) with 0.1% chance to win a EPIC item! \r\n        "
  	 	 	}
  	 	},
@@ -4528,7 +4528,7 @@
  	 	 	 	"eng": "Collect Protection Fees"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "贿赂政府官员和SLPD，并从香格里拉的商人和公民收取保护费。 也许你会从中获得一些史诗般的物品？ （顶级两个公会独家）",
+ 	 	 	 	"trans": "贿赂政府官员和SLPD，并从香格里拉的商人和公民收取保护费。 也许你会从中获得一些史诗级别的物品？ （仅限于占领控制榜排名前二的公会）",
  	 	 	 	"eng": "Bribe government officials and the SLPD to collect protection fees from business owners and citizens in Shangri-La. Maybe you’ll get some EPIC items from them? (Exclusive to the Top 2 Gangs on the Occupation Leaderboard"
  	 	 	}
  	 	},
@@ -4621,7 +4621,7 @@
  	 	 	 	 	"eng": "Print equipment"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "使用3D分子打印机来打印任何物品缓存",
+ 	 	 	 	 	"trans": "使用3D分子打印机来打印任何物品缓存单元",
  	 	 	 	 	"eng": "use molecular print to print any item cache"
  	 	 	 	}
  	 	 	},
@@ -4691,7 +4691,7 @@
  	 	 	 	 	"eng": "Be a merchant"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "在市场上上架一个物品",
+ 	 	 	 	 	"trans": "在玩家市集里上架一个物品",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
  	 	 	}
@@ -4700,12 +4700,12 @@
  	"recipe": {
  	 	"unlockLootBox1": {
  	 	 	"name": {
- 	 	 	 	"trans": "解密容器",
+ 	 	 	 	"trans": "解锁容器",
  	 	 	 	"eng": "Unlock Container"
  	 	 	}
  	 	},
  	 	"unlock": {
- 	 	 	"trans": "解密",
+ 	 	 	"trans": "解锁",
  	 	 	"eng": "Unlock"
  	 	},
  	 	"unlockLootBox2": {
@@ -4733,7 +4733,7 @@
  	 	 	}
  	 	},
  	 	"trade": {
- 	 	 	"trans": "贸易",
+ 	 	 	"trans": "交易",
  	 	 	"eng": "Trade"
  	 	},
  	 	"backpack2": {
@@ -4880,7 +4880,7 @@
  	 	 	 	"amount",
  	 	 	 	"levelName"
  	 	 	],
- 	 	 	"trans": "您获得了${amount} ${levelName}Exp(经验点)",
+ 	 	 	"trans": "您获得了${amount} ${levelName}经验点",
  	 	 	"eng": "You received ${amount} ${levelName} experience points"
  	 	},
  	 	"item": {
@@ -5106,7 +5106,7 @@
  	 	 	"eng": "of Health"
  	 	},
  	 	"upgradeDamage": {
- 	 	 	"trans": "损害",
+ 	 	 	"trans": "伤害",
  	 	 	"eng": "of Damage"
  	 	},
  	 	"upgradeShield": {
@@ -5152,7 +5152,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"total"
  	 	 	 	],
- 	 	 	 	"trans": "它将花费${total}比特币",
+ 	 	 	 	"trans": "将花费${total}比特币",
  	 	 	 	"eng": "it will cost ${total} Bitcoin total"
  	 	 	}
  	 	},
@@ -5255,12 +5255,12 @@
  	 	 	"vars": [
  	 	 	 	"CURRENCY"
  	 	 	],
- 	 	 	"trans": "您没有足够的${CURRENCY}来购买此项目",
+ 	 	 	"trans": "您没有足够的${CURRENCY}来购买此物品",
  	 	 	"eng": "You do not have enough ${CURRENCY} to purchase this item"
  	 	},
  	 	"slider": {
  	 	 	"title": {
- 	 	 	 	"trans": "你想购买多少？",
+ 	 	 	 	"trans": "你想要购买多少个？",
  	 	 	 	"eng": "How many would you like to purchase?"
  	 	 	},
  	 	 	"amountDisplay": {
@@ -5295,13 +5295,13 @@
  	 	 	 	"eng": "This will donate ${amount} Unit from your account"
  	 	 	},
  	 	 	"notEnough": {
- 	 	 	 	"trans": "你没有足够的单元捐赠。",
+ 	 	 	 	"trans": "你没有足够的单元来捐赠。",
  	 	 	 	"eng": "You do not have enough Unit to donate."
  	 	 	}
  	 	},
  	 	"chatMessage": {
  	 	 	"block": {
- 	 	 	 	"trans": "堵塞",
+ 	 	 	 	"trans": "屏蔽",
  	 	 	 	"eng": "Block"
  	 	 	},
  	 	 	"openPlayerProfile": {
@@ -5468,7 +5468,7 @@
  	 	},
  	 	"resultScreen": {
  	 	 	"title": {
- 	 	 	 	"trans": "升级",
+ 	 	 	 	"trans": "胜利",
  	 	 	 	"eng": "Victory"
  	 	 	},
  	 	 	"subTitle": {
@@ -5591,7 +5591,7 @@
  	 	 	 	"eng": "I am Dexter, the developer of CyberCode Online."
  	 	 	},
  	 	 	"content3": {
- 	 	 	 	"trans": "如果你有写闲钱，就捐赠吧，这对我与我的游戏开发都很有帮助！",
+ 	 	 	 	"trans": "如果你有些闲钱，就捐赠吧，这对我和游戏开发都非常有帮助！",
  	 	 	 	"eng": "If you have some spare change it would be very helpful if you could donate to help with continued support and development of the game."
  	 	 	},
  	 	 	"content4": {
@@ -5622,7 +5622,7 @@
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "这个标题永远不会过期。\\ nit永远留在您的帐户。",
+ 	 	 	"trans": "这个标题永远不会过期。\ 它将永远留在您的帐户上。",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
