--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -268,7 +268,7 @@
  	 	 	 	},
  	 	 	 	"tertiary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "破坏性武器",
+ 	 	 	 	 	 	"trans": "毁灭性武器",
  	 	 	 	 	 	"eng": "Destruct."
  	 	 	 	 	}
  	 	 	 	}
@@ -5622,7 +5622,7 @@
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "这个标题永远不会过期。\ 它将永远留在您的帐户上。",
+ 	 	 	"trans": "这个标题永远不会过期。\\ 它将永远留在您的帐户上。",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
