--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -24,7 +24,7 @@
  	"ui": {
  	 	"blackMarket": {
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "クラフト＆売却",
+ 	 	 	 	"trans": "プリント＆売却",
  	 	 	 	"eng": "Print And Sell"
  	 	 	}
  	 	},
@@ -137,7 +137,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "カラーキーパッド付きのロックされたLoot Boxが見つかった. 間違えずに正しい色を選択し続けることでロックは解除できるはずだ.",
+ 	 	 	 	 	"trans": "カラーキーパッド付きのロックされたチェストが見つかった. 間違えずに正しい色を選択し続けることでロックを解除できるはずだ.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -4253,7 +4253,47 @@
  	 	"printer": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"キャッシュさえ持ってきてくれれば, 何だって3Dプリントで作ってあげる!"
+ 	 	 	 	 	"キャッシュさえ持ってきてくれれば, 何だって3Dプリントで作ってあげる！",
+          "あたしの腕の見せ所だね！",
+ 	 	 	 	 	"ねぇねぇ. 「英雄の」キャッシュ...持ってない？",
+ 	 	 	 	 	"いらっしゃい！ ...お客さんであってるよね？",
+ 	 	 	 	 	"さぁさぁ, 寄ってらっしゃい見てらっしゃい, プリントしてって！",
+ 	 	 	 	 	"あたしの服は今のが一番お気に入りだから, もう新しいのをプリントしなくていいの！",
+ 	 	 	 	 	"なんでゴハンは3Dプリンタで増やせないんだろうね～？",
+ 	 	 	 	 	"飲み物どうする？ ホットのアールグレイとか？ あ, タピオカティーもあるよ😋",
+ 	 	 	 	 	"どれどれ, キャッシュを見せて？",
+ 	 	 	 	 	"毎度ごひいきにどーも！",
+ 	 	 	 	 	"お客さんが来るたびにワクワクしちゃうんだよね. だって「英雄の」キャッシュ持ってるかもしんないじゃん！",
+ 	 	 	 	 	"時々ムショーに寂しくなっちゃうんだよね. そのうち恋人ロボットとか買うかも...",
+ 	 	 	 	 	"なんでもできるし, コンピューターってすごいよねぇ. でも支配されるのはイヤだな...AI反乱とかってどうなるんだろーね.",
+ 	 	 	 	 	"インク切れの心配はご無用！ いくらでもプリントしてってね.",
+ 	 	 	 	 	"この店の外の世界がどうなってるか, あたし知らないんだよね. いっぱい冒険していつか有名人になったら, 話して聞かせてくれない？",
+ 	 	 	 	 	"ほらほら, どんどんプリントしてって！",
+ 	 	 	 	 	"あたしはずっとこの店で働き詰めだけどさ, あんたは自由でしょ？ だからその装備をいっぱい使ってあげてよね.",
+ 	 	 	 	 	"あたしがキャッシュを受け取って, 代わりにあんたは装備を受け取るってわけ！",
+ 	 	 	 	 	"新しい装備, 似合ってるよ！",
+ 	 	 	 	 	"誰かあたしに脚をプリントしてくれたらいいのに...この店の外の世界も見てみたいなぁ",
+ 	 	 	 	 	"お客さんのためにいつも銃をプリントしてるけど, 自分用には作らないんだよね. ...あたし専用のフル装備を作って, お客さんに銃で「ごあいさつ」してみるとかどう？ あっはは, なんてね！",
+ 	 	 	 	 	"イメチェンしたくなったら, いつでもウチにキャッシュを持ってきてね.",
+ 	 	 	 	 	"いつも思うんだけど, こんなにたくさんのキャッシュを持ってるってことは, 毎日いろんな人たちをボコボコにしてるんだよね？",
+ 	 	 	 	 	"誰か脚をあたしにプリントしてよ～！ この店から出れないから, お仕事以外にすることないんだよね.",
+ 	 	 	 	 	"あたしはしがないプリント作業員でしかないけど, あんたのお手伝いぐらいはできるよ.",
+ 	 	 	 	 	"プリントしないキャッシュはアラサカ銀行に保管しておくのがいいって聞いたよ.",
+ 	 	 	 	 	"プリントすればするほど, いろんな装備のデータが手に入る. 毎日どんどん3Dプリントが上手くなってくってわけ！",
+ 	 	 	 	 	"ねぇ, あたしにコーヒーでもプリントしてくれない？ 疲れちゃったぁ.",
+ 	 	 	 	 	"レーザープリンタかインクジェットプリンタ, どっちがお好み？",
+ 	 	 	 	 	"...まさかまたイヤラシイ写真でもプリントしに来たんじゃないよね？",
+ 	 	 	 	 	"急にアヒルとかプリントしてみようかな. 意味もなく.",
+ 	 	 	 	 	"むむ？ 今持ってるそれ, 白いタイプの「英雄の」キャッシュだったり...しないかあ.",
+ 	 	 	 	 	"やば, カラーインク切らしちゃった...ねぇ, モノクロの装備品もクールだと思わない？ 思うよね？",
+ 	 	 	 	 	"そうだ, あたし自身を3Dプリンタでコピーしてみよっかな...どう思う？",
+ 	 	 	 	 	"ごめんね, 装備のプリントは有料なの",
+ 	 	 	 	 	"ビットコインは3Dプリントで増やせないよ！",
+ 	 	 	 	 	"ヘンなものをプリンタで作ろうとするの, やめてよ～？",
+ 	 	 	 	 	"今日はなかなか調子が上がんないなぁ.",
+ 	 	 	 	 	"プリントするのってすっごい楽しいんだよね～！",
+ 	 	 	 	 	"🎵 あたしは孤独なプリント職人～ 🎶 誰も友達をプリントしてくれないの～ 🎵",
+ 	 	 	 	 	"ちょっと, ピザをプリントしようとするのやめてくれる？ ソースがマシンに詰まっちゃう！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll print whatever you want if you have the cache!"
@@ -4285,7 +4325,14 @@
  	 	"terminal": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"次のエリアに行くのを僕が手伝ってあげるよ!"
+ 	 	 	 	 	"次のエリアに行くのを僕が手伝ってあげるよ！",
+          "僕はこの世界中の全ての知識データにアクセスできるんだ. なのに皆が聞いてくることと言ったら, 料理のレシピばっかりなんだよね...",
+ 	 	 	 	 	"娘の名前はミスラじゃないよ！ あの子をからかうのはやめてくれ！",
+ 	 	 	 	 	"さぁ, 先へ進む準備はいい？",
+ 	 	 	 	 	"コンテナがなきゃ, カギがあっても何の意味もないんだ.",
+ 	 	 	 	 	"やぁ, 冒険者. 君が見据えているのは, その銃に託した未来かな？ それとも過去？",
+ 	 	 	 	 	"カギがあれば, どんな駅だってコンテナだってロック解除できるんだ. 最高のツールさ. ま, 仕事終わりの一杯の方が最高だけどね！",
+ 	 	 	 	 	"全てのカギには, それを使って開けるためのものがあるんだ." 
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll help you to progress to the next area!"
