--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -4292,7 +4292,7 @@
  	 	 	 	 	"ヘンなものをプリンタで作ろうとするの, やめてよ～？",
  	 	 	 	 	"今日はなかなか調子が上がんないなぁ.",
  	 	 	 	 	"プリントするのってすっごい楽しいんだよね～！",
- 	 	 	 	 	"🎵 あたしは孤独なプリント職人～ 🎶 誰も友達をプリントしてくれないの～ 🎵",
+ 	 	 	 	 	"🎵 あたしは孤独なプリント職人～ 🎶 誰もあたしに友達をプリントしちゃあくれないのさ～ 🎵",
  	 	 	 	 	"ちょっと, ピザをプリントしようとするのやめてくれる？ ソースがマシンに詰まっちゃう！"
  	 	 	 	],
  	 	 	 	"eng": [
@@ -4311,7 +4311,7 @@
  	 	"weaponSmith": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"アンタにぴったりの装備を見繕ってやんよ"
+ 	 	 	 	 	"アンタにぴったりの装備を見繕ってやんよ",
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -4390,7 +4390,19 @@
  	 	"equipmentUpgrade": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"キャリブレーションコアをマシンに挿入しな. 装備の調整, 手伝ってやるよ"
+ 	 	 	 	 	"キャリブレーションコアをマシンに挿入しな. 装備の調整, 手伝ってやるよ",
+          "キャリブレーションは手伝ってやるけど, 事故って装備がぶっ壊れても責任は負わねーぜ.",
+ 	 	 	 	 	"相手の顔をしっかりと見て話す主義でね. ほら, あたしだけじゃなくウチの愛銃もじっくり見てるぜ. アンタの顔.",
+ 	 	 	 	 	"今日はツいてる気がする？ そいつぁいいや, そこのマシンで一発運試ししてみなよ.",
+ 	 	 	 	 	"どの装備も現品限りってワケさ. キャリブレーションはご自分の責任でよろしく頼むぜ. あん？ 不安だから責任者立ち合いのもとキャリブしたい？ 目の前にいるじゃんか.",
+ 	 	 	 	 	"あたしはカミコ. そこのべっぴんが愛しのマシンのキャリーさ. あー, カノジョちょっと......怒ると手が付けらんないんだよね.",
+ 	 	 	 	 	"あんたの装備......や, えーと, もっと良くなると思うぜ. 貸してみなよ.",
+ 	 	 	 	 	"データを解析しなきゃなんで, コアを持ってきてもらってからキャリブレーションできるようになるまでには時間がかかるぜ.",
+ 	 	 	 	 	"キャリブレーションコアをマシンに入れたら, しばらく...あーっと, 30分ぐらい待たなきゃなんだよね. そこでずっと待っててもいいけど, 適当にその辺でもブラついといてくれた方が, あたしとしてもありがたいぜ.",
+ 	 	 	 	 	"ウチじゃあキャリブレーションコアは扱ってないんだ. こっちはマシンを提供して, そっちはコアを提供する. この店じゃそういうルールだぜ.",
+ 	 	 	 	 	"アンタの装備がぶっ壊れちまう可能性があるかって？ そりゃもちろん. けどよ, リスクを冒すだけの価値は絶対あるぜ. 請け合いだ.",
+ 	 	 	 	 	"今日は何を強化するんだい？",
+ 	 	 	 	 	"キャリブレーションの時間だぜ！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
