--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1269,7 +1269,7 @@
  	 	 	 	 	"eng": "Disable Chat Effect"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Désactiver en cas latence dans le tchat pendant les skips",
+ 	 	 	 	 	"trans": "Désactiver en cas de latence dans le tchat pendant les skips",
  	 	 	 	 	"eng": "Disable if chat tab lags during skips"
  	 	 	 	}
  	 	 	},
